--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,13 @@
+{
+  "name": "Profit Tracker",
+  "short_name": "ProfitApp",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#4f46e5",
+  "icons": [
+    { "src": "Gambar_WhatsApp_2025-08-15_pukul_22.37.15_371f0130-removebg-preview.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "Gambar_WhatsApp_2025-08-15_pukul_22.37.15_371f0130-removebg-preview.png", "sizes": "512x512", "type": "image/png" }
+  ]
+}
 
