--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
   "background_color": "#ffffff",
   "theme_color": "#4f46e5",
   "icons": [
-    { "src": "Gambar_WhatsApp_2025-08-15_pukul_22.37.15_371f0130-removebg-preview.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "Gambar_WhatsApp_2025-08-15_pukul_22.37.15_371f0130-removebg-preview.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
 
