--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Profit Tracker",
+  "name": "ayam potong",
   "short_name": "ProfitApp",
   "start_url": "/",
   "display": "standalone",
